CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( FindDaDucts )

message(STATUS "module path: ${CMAKE_MODULE_PATH} ${CMAKE_ROOT}")

FIND_PACKAGE(CPLEX)
FIND_PACKAGE(CONCERT)
IF(CPLEX_FOUND)
	INCLUDE_DIRECTORIES(${CPLEX_INCLUDE_DIRS})
ENDIF(CPLEX_FOUND)
IF(CONCERT_FOUND)
	INCLUDE_DIRECTORIES(${CONCERT_INCLUDE_DIRS})
ENDIF(CONCERT_FOUND)
ADD_DEFINITIONS(-DIL_STD)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
	INCLUDE( ${ITK_USE_FILE} )
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR "Cannot build without ITK.  Please set ITK_DIR.")
ENDIF(ITK_FOUND)

SET( FDSRCS
	main1.cpp
	FDDijkstra.cxx
)

ADD_EXECUTABLE( findduct main1.cpp )
TARGET_LINK_LIBRARIES( findduct ${ITK_LIBRARIES} ${CONCERT_LIBRARIES} ${CPLEX_LIBRARIES} )
