CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( ColorLabs )

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
	INCLUDE( ${ITK_USE_FILE} )
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR "Cannot build without ITK.  Please set ITK_DIR.")
ENDIF(ITK_FOUND)

ADD_EXECUTABLE( colorlabels color_labs.cpp )
TARGET_LINK_LIBRARIES( colorlabels ${ITK_LIBRARIES} )
